Se cambia el NavMenu

--- a/VentaDeAccesoriosIU/Layout/NavMenu.razor
+++ b/VentaDeAccesoriosIU/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="top-row ps-3 navbar navbar-dark" style="background-color: #007bff;">
+﻿<div class="top-row ps-3 navbar navbar-dark" style="background-color: #092464;">
 
     <div class="container-fluid">
 
