--- a/VentaDeAccesoriosIU/Layout/MainLayout.razor.css
+++ b/VentaDeAccesoriosIU/Layout/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(0, 122, 253) 0%, #0056b4 70%);
 }
 
 .top-row {
