--- a/VentaDeAccesoriosIU/Pages/Productos.razor
+++ b/VentaDeAccesoriosIU/Pages/Productos.razor
@@ -668,7 +668,7 @@
             paginaActual--;
     }
 
-    // Definición del modelo "Producto" (Con VentaDeAccesoriosAPI.Data.Models.Producto)
+    // Definición del modelo "Producto"
     public class Producto
     {
         public int IdProducto { get; set; }
