revisiones antes de entrega

--- a/VentaDeAccesoriosIU/Layout/NavMenu.razor
+++ b/VentaDeAccesoriosIU/Layout/NavMenu.razor
@@ -1,10 +1,11 @@
-﻿<div class="top-row ps-3 navbar navbar-dark" style="background-color: #092464;">
+﻿<div class="top-row ps-3 navbar navbar-dark" style="background-color: #0078fa
+ ;">
 
     <div class="container-fluid">
 
         <span class="navbar-brand text-white" @onclick="ToggleNavMenu" style="cursor: pointer;">
 
-            <i class="bi bi-bag-fill"></i>
+            <i class="bi bi-bag-fill"></i><span>Menú</span>
 
         </span>
 
@@ -54,7 +55,7 @@
         </div>
 
 
-        <div class="nav-item px-3">
+     @*    <div class="nav-item px-3">
 
             <NavLink class="nav-link" href="ecommerce">
 
@@ -62,7 +63,7 @@
 
             </NavLink>
 
-        </div>
+        </div> *@
 
         <div class="nav-item px-3">
 
