--- a/VentaDeAccesoriosIU/Pages/Sedes.razor
+++ b/VentaDeAccesoriosIU/Pages/Sedes.razor
@@ -91,16 +91,16 @@
                                 
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col-md-3">
+                                        <div class="col-md-4">
                                             <button type="submit" class="btn btn-success btn-block btn-lg">GUARDAR</button>
                                         </div>
-                                        <div class="col-md-3">
+                                        <div class="col-md-4">
                                             <button type="button" class="btn btn-warning btn-block btn-lg" @onclick="UpdateSede">ACTUALIZAR</button>
                                         </div>
-                                        <div class="col-md-3">
+                                       @*  <div class="col-md-3">
                                             <button type="button" class="btn btn-primary btn-block btn-lg" @onclick="Buscar">CONSULTAR</button>
-                                        </div>
-                                        <div class="col-md-3">
+                                        </div> *@
+                                        <div class="col-md-4">
                                             <button type="button" class="btn-secondary btn-block btn-lg" @onclick="LimpiarFormulario">LIMPIAR</button>
                                         </div>
                                     </div>
