ENTREGABLE 5 de junio FINAL

--- a/VentaDeAccesoriosIU/Pages/Productos.razor
+++ b/VentaDeAccesoriosIU/Pages/Productos.razor
@@ -374,8 +374,8 @@
                                     <td>@prod.IdProducto</td>
                                     <td>@prod.Nombre</td>
                                     <td>@prod.Descripcion</td>
-                                    <td>@prod.PrecioCompra.ToString("C0")</td>
-                                    <td>@prod.PrecioVenta.ToString("C0")</td>
+                                    <td>@prod.PrecioCompra</td>
+                                    <td>@prod.PrecioVenta</td>
                                     <td>@prod.StockTotal</td>
                                     <td>@prod.GarantiaMeses</td>
                                     <td>
